Added demo backend

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,12 @@
 <h1>Hello World</h1>
+
+<%= fakeData.city %>
+<br />
+<%= fakeData.provider_name %>
+<br />
+<%= fakeData.provider_address %>
+<br />
+<%= fakeData.phone %>
+<br />
+
+<h5>Material Handled: <%= fakeData.material_handled%></h5>
