--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+      <nav>
+          <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Logo</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="sass.html">Home</a></li>
+              <li><a href="badges.html">How to Recycling</a></li>
+              <li><a href="collapsible.html">Recycling Education</a></li>
+              <li><a href="collapsible.html">Contact</a></li>
+            </ul>
+          </div>
+        </nav>
     <div class="container" id="wrapper">
       <%- body %>
     </div>
