Linked pages together. Made routes

--- a/views/categories/index.ejs
+++ b/views/categories/index.ejs
@@ -139,7 +139,7 @@
                         <p>Grocery</p>
                     </div>
                     <div class="card-action">
-                        <a href="#">Action</a>
+                        <a href="/address">Action</a>
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                             <p>Agricultural</p>
                         </div>
                         <div class="card-action">
-                            <a href="#">Action</a>
+                            <a href="/address">Action</a>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                             <p>Office</p>
                         </div>
                         <div class="card-action">
-                            <a href="#">Action</a>
+                            <a href="/address">Action</a>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                             <p>Office</p>
                         </div>
                         <div class="card-action">
-                            <a href="#">Mixed</a>
+                            <a href="/address">Mixed</a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                             <p>ITEM</p>
                         </div>
                         <div class="card-action">
-                            <a href="#">Action</a>
+                            <a href="/address">Action</a>
                         </div>
                     </div>
                 </div>
@@ -258,7 +258,7 @@
                                 <p>ITEM</p>
                             </div>
                             <div class="card-action">
-                                <a href="#">Action</a>
+                                <a href="/address">Action</a>
                             </div>
                         </div>
                     </div>
@@ -278,7 +278,7 @@
                                 <p>ITEM</p>
                             </div>
                             <div class="card-action">
-                                <a href="#">Action</a>
+                                <a href="/address">Action</a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                                 <p>Printer, Copier, or Fax</p>
                             </div>
                             <div class="card-action">
-                                <a href="#">Action</a>
+                                <a href="/address">Action</a>
                             </div>
                         </div>
                     </div>
@@ -311,7 +311,7 @@
                                     <p>TV</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#">Action</a>
+                                    <a href="/address">Action</a>
                                 </div>
                             </div>
                         </div>
@@ -324,7 +324,7 @@
                                     <p>Computer Tablets</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#">Action</a>
+                                    <a href="/address">Action</a>
                                 </div>
                             </div>
                         </div>
@@ -337,7 +337,7 @@
                                     <p>Phones (All)</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#">Action</a>
+                                    <a href="/address">Action</a>
                                 </div>
                             </div>
                         </div>
@@ -350,7 +350,7 @@
                                     <p>Phones AV equipment</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#">Action</a>
+                                    <a href="/address">Action</a>
                                 </div>
                             </div>
                         </div>
@@ -363,7 +363,7 @@
                                     <p>Monitors</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#">Action</a>
+                                    <a href="/address">Action</a>
                                 </div>
                             </div>
                         </div>
@@ -384,7 +384,7 @@
                                 <p>ITEM</p>
                             </div>
                             <div class="card-action">
-                                <a href="#">Action</a>
+                                <a href="/address">Action</a>
                             </div>
                         </div>
                     </div>
@@ -404,7 +404,7 @@
                                 <p>ITEM</p>
                             </div>
                             <div class="card-action">
-                                <a href="#">Action</a>
+                                <a href="/address">Action</a>
                             </div>
                         </div>
                     </div>
