--- a/views/results/show.ejs
+++ b/views/results/show.ejs
@@ -2,7 +2,7 @@
     <h2>Your Results</h2>
       <div class="results">
           <p class="result-name"> 3RTechnology </p>
-          <a class="result-link" href="#">
+          <a class="result-link" href="/recycle-site">
             <p>Link1</p>
           </a>
     </div>
@@ -10,7 +10,7 @@
     <h2>Your Results</h2>
       <div class="results">
           <p class="result-name">Friendly Earth </p>
-          <a class="result-link" href="#">
+          <a class="result-link" href="/recycle-site">
             <p>Link1</p>
           </a>
     </div>
@@ -18,7 +18,7 @@
     <h2>Your Results</h2>
       <div class="results">
           <p class="result-name"> Pacific Iron & Metal </p>
-          <a class="result-link" href="#">
+          <a class="result-link" href="/recycle-site">
             <p>Link1</p>
           </a>
     </div>
@@ -26,7 +26,7 @@
     <h2>Your Results</h2>
       <div class="results">
           <p class="result-name"> RE-PC Recycled Computers and Peripherals </p>
-          <a class="result-link" href="#">
+          <a class="result-link" href="/recycle-site">
             <p>Link1</p>
           </a>
     </div>
