--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,27 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .card-action {
     border: none !important;
     text-align: right;
+}
+
+.nav-logo {
+    height: 3em;
+    margin-left: 0.7em;
+    margin-top: 0.2em;
+}
+
+nav {
+    background-color: rgba(121, 193, 94, 0.7) !important;
+}
+
+nav a {
+    font-size: 1.2em !important;
+    margin-right: 0.5em;
+}
+
+.modal card img {
+    height: 10em;
 }
