--- a/views/categories/index.ejs
+++ b/views/categories/index.ejs
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s12 m7 l4">
+    <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
                 <img src="https://materializecss.com/images/sample-1.jpg">
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <div class="col s12 m7 l4">
+    <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
                 <img src="https://materializecss.com/images/sample-1.jpg">
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <div class="col s12 m7 l4">
+    <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
                 <img src="https://materializecss.com/images/sample-1.jpg">
@@ -41,7 +41,7 @@
         </div>
         </div>
 
-    <div class="col s12 m7 l4">
+    <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
                 <img src="https://materializecss.com/images/sample-1.jpg">
@@ -55,7 +55,7 @@
         </div>
     </div>
         
-        <div class="col s12 m7 l4">
+        <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
                     <img src="https://materializecss.com/images/sample-1.jpg">
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="col s12 m7 l4">
+        <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
                     <img src="https://materializecss.com/images/sample-1.jpg">
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-        <div class="col s12 m7 l4">
+        <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
                     <img src="https://materializecss.com/images/sample-1.jpg">
@@ -97,7 +97,7 @@
             </div>
         </div>
 
-        <div class="col s12 m7 l4">
+        <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
                     <img src="https://materializecss.com/images/sample-1.jpg">
@@ -111,7 +111,7 @@
             </div>
         </div>
 
-        <div class="col s12 m7 l4">
+        <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
                     <img src="https://materializecss.com/images/sample-1.jpg">
@@ -318,7 +318,7 @@
                     <div class="col s12 m7 l4">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="https://materializecss.com/images/sample-1.jpg">
+                                    <img src="img/tablet.png">
                                 </div>
                                 <div class="card-content">
                                     <p>Computer Tablets</p>
