--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,16 +6,17 @@
     <title>Project 2</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
       <nav>
           <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Logo</a>
+              <a href="/" class="brand-logo"><img class="nav-logo" src="/img/logo.png"></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="sass.html">Home</a></li>
-              <li><a href="badges.html">How to Recycling</a></li>
-              <li><a href="collapsible.html">Recycling Education</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="badges.html">Guide</a></li>
+              <li><a href="collapsible.html">Education</a></li>
               <li><a href="collapsible.html">Contact</a></li>
             </ul>
           </div>
