--- a/views/results/show.ejs
+++ b/views/results/show.ejs
@@ -1,5 +1,7 @@
+<h1>Results</h1>
 
-    <h2>Your Results</h2>
+
+    <h4>3RTechnology</h4>
       <div class="results">
           <p class="result-name"> 3RTechnology </p>
           <a class="result-link" href="/recycle-site">
@@ -7,7 +9,7 @@
           </a>
     </div>
 
-    <h2>Your Results</h2>
+    <h5>Friendly Earth</h5>
       <div class="results">
           <p class="result-name">Friendly Earth </p>
           <a class="result-link" href="/recycle-site">
@@ -15,7 +17,7 @@
           </a>
     </div>
 
-    <h2>Your Results</h2>
+    <h5>Pacific Iron & Metal</h5>
       <div class="results">
           <p class="result-name"> Pacific Iron & Metal </p>
           <a class="result-link" href="/recycle-site">
@@ -23,10 +25,12 @@
           </a>
     </div>
 
-    <h2>Your Results</h2>
+    <h5>RE-PC Recycled Computers and Peripherals</h5>
       <div class="results">
           <p class="result-name"> RE-PC Recycled Computers and Peripherals </p>
           <a class="result-link" href="/recycle-site">
             <p>Link1</p>
           </a>
     </div>
+
+  
