--- a/views/categories/index.ejs
+++ b/views/categories/index.ejs
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="top-row row">
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
-                <img src="https://materializecss.com/images/sample-1.jpg">
+                <img src="img/plastic.jpg">
             </div>
             <div class="card-content">
                 <p>Plastic</p>
@@ -16,7 +16,7 @@
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
-                <img src="https://materializecss.com/images/sample-1.jpg">
+                <img src="img/paper.jpg">
             </div>
             <div class="card-content">
                 <p>Paper</p>
@@ -30,7 +30,7 @@
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
-                <img src="https://materializecss.com/images/sample-1.jpg">
+                <img src="img/glass.jpg">
             </div>
             <div class="card-content">
                 <p>Glass</p>
@@ -44,7 +44,7 @@
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
-                <img src="https://materializecss.com/images/sample-1.jpg">
+                <img src="img/metal.jpg">
             </div>
             <div class="card-content">
                 <p>Metals</p>
@@ -58,10 +58,10 @@
         <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
-                    <img src="https://materializecss.com/images/sample-1.jpg">
+                    <img src="img/food.jpg">
                 </div>
                 <div class="card-content">
-                    <p>Yard</p>
+                    <p>Organic</p>
                 </div>
                 <div class="card-action">
                     <a class="waves-effect waves-light modal-trigger" href="#modal5">Action</a>
@@ -72,7 +72,7 @@
         <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
-                    <img src="https://materializecss.com/images/sample-1.jpg">
+                    <img src="img/chemicals.jpg">
                 </div>
                 <div class="card-content">
                     <p>Chemical</p>
@@ -86,7 +86,7 @@
         <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
-                    <img src="https://materializecss.com/images/sample-1.jpg">
+                    <img src="img/electronics.png">
                 </div>
                 <div class="card-content">
                     <p>Electronics</p>
@@ -100,7 +100,7 @@
         <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
-                    <img src="https://materializecss.com/images/sample-1.jpg">
+                    <img src="img/appliances.jpg">
                 </div>
                 <div class="card-content">
                     <p>Appliances</p>
@@ -114,7 +114,7 @@
         <div class="col s12 m6 l4">
             <div class="card">
                 <div class="card-image">
-                    <img src="https://materializecss.com/images/sample-1.jpg">
+                    <img src="img/building.jpg">
                 </div>
                 <div class="card-content">
                     <p>Building Materials</p>
@@ -292,7 +292,7 @@
                     <div class="col s12 m7 l4">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://materializecss.com/images/sample-1.jpg">
+                                <img src="img/printer.png">
                             </div>
                             <div class="card-content">
                                 <p>Printer, Copier, or Fax</p>
@@ -305,7 +305,7 @@
                     <div class="col s12 m7 l4">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="https://materializecss.com/images/sample-1.jpg">
+                                    <img src="img/tv.png">
                                 </div>
                                 <div class="card-content">
                                     <p>TV</p>
@@ -318,7 +318,7 @@
                     <div class="col s12 m7 l4">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="img/tablet.png">
+                                    <img src="img/tablet3.png">
                                 </div>
                                 <div class="card-content">
                                     <p>Computer Tablets</p>
@@ -331,7 +331,7 @@
                     <div class="col s12 m7 l4">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="https://materializecss.com/images/sample-1.jpg">
+                                    <img src="img/phone.png">
                                 </div>
                                 <div class="card-content">
                                     <p>Phones (All)</p>
@@ -344,10 +344,10 @@
                     <div class="col s12 m7 l4">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="https://materializecss.com/images/sample-1.jpg">
+                                    <img src="img/AVequip.png">
                                 </div>
                                 <div class="card-content">
-                                    <p>Phones AV equipment</p>
+                                    <p>AV equipment</p>
                                 </div>
                                 <div class="card-action">
                                     <a href="/address">Action</a>
@@ -357,7 +357,7 @@
                     <div class="col s12 m7 l4">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="https://materializecss.com/images/sample-1.jpg">
+                                    <img src="img/monitors.jpg">
                                 </div>
                                 <div class="card-content">
                                     <p>Monitors</p>
