--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,7 +15,7 @@
               <a href="/" class="brand-logo"><img class="nav-logo" src="/img/logo.png"></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li><a href="/">Home</a></li>
-              <li><a href="badges.html">Guide</a></li>
+              <li><a href="/index">Guide</a></li>
               <li><a href="collapsible.html">Education</a></li>
               <li><a href="collapsible.html">Contact</a></li>
             </ul>
