--- a/views/centers/center.ejs
+++ b/views/centers/center.ejs
@@ -1,17 +1,20 @@
-<h1 class="center-name"><%= center.provider_name %></h1>
+<h3 class="center-name"><%= center.provider_name %></h3>
 
-<p><span class="bold"> Electronics to Recycle: </span> <%= center.material_handled %></p>
+<div class="container1">
+  <p><span class="bold"> Electronics to Recycle:  </span> <%= center.material_handled %></p>
 
-<p><span class="bold"> Address: </span> <%= center.mapping_location_address%></p>
+  <p><span class="bold"> Address:  </span> <%= center.mapping_location_address%></p>
 
-<p><span class="bold"> City: </span><%= center.mapping_location_city %></p>
+  <p><span class="bold"> City:  </span><%= center.mapping_location_city %></p>
 
-<p><span class="bold">Zip: </span><%= center.zip %></p>
+  <p><span class="bold">Zip:  </span><%= center.zip %></p>
 
-<p><span class="bold">Contact us: </span><%= center.phone %></p>
+  <p><span class="bold">Contact us:  </span><%= center.phone %></p>
 
-<p><span class="bold">Allowed pick up: </span><%= center.pickup_allowed %></p>
+  <p><span class="bold">Allowed pick up:  </span><%= center.pickup_allowed %></p>
 
-<p><span class="bold">Restrictions: </span> <%= center.restrictions %></p>
+  <p><span class="bold">Restrictions:  </span> <%= center.restrictions %></p>
 
-<p><span class="bold">Service Description: </span> <%= center.service_description %></p>
+  <p><span class="bold">Service Description:  </span> <%= center.service_description %></p>
+
+</div>
