--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,3 +29,40 @@ nav a {
 .modal card img {
     height: 10em;
 }
+
+
+.bold {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+h5 {
+  background: rgb(192, 209, 194);
+  padding: 1em;
+  box-shadow: 5px 10px #888888;
+}
+
+.results {
+  color: rgba(0, 11, 7, 0.83);
+}
+
+.live {
+  font-size: 30px;
+}
+
+.container1 {
+    margin-top: 4em;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    box-shadow: 5px 10px #888888;
+    padding: 20px;
+
+}
+
+.testcontainer {
+  margin-top: 4em;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  box-shadow: 5px 10px #888888;
+  padding: 20px;
+}
