--- a/views/address/new.ejs
+++ b/views/address/new.ejs
@@ -1,17 +1,18 @@
-<h1>Where do you live?</h1>
+<h1 class="live">Where do you live?</h1>
+<div class="testcontainer">
+  <form class="form" action="/results" method="GET">
+    <label for="address">Address line 1</label>
+    <input id="address-input" type="text" name="address" required>
 
-<form class="form" action="/results" method="GET">
-  <label for="address">Address line 1</label>
-  <input id="address-input" type="text" name="address" required>
+    <label for="city">City</label>
+    <input id="city-input" type="text" name="city" required>
 
-  <label for="city">City</label>
-  <input id="city-input" type="text" name="city" required>
+    <label for="state">State</label>
+    <input id="state-input" type="text" name="state" required>
 
-  <label for="state">State</label>
-  <input id="state-input" type="text" name="state" required>
+    <label for="zip">Zip</label>
+    <input id="zip-input" type="number" name="zip" required>
 
-  <label for="zip">Zip</label>
-  <input id="zip-input" type="number" name="zip" required>
-
-  <button type="submit">Submit</button>
-</form>
+    <button type="submit">Submit</button>
+  </form>
+</div>
