--- a/views/results/show.ejs
+++ b/views/results/show.ejs
@@ -1,36 +1,30 @@
-<h1>Results</h1>
+<h1 class="results">Results:</h1>
 
 
-    <h4>3RTechnology</h4>
+    <h5>1. 3RTechnology</h5>
       <div class="results">
-          <p class="result-name"> 3RTechnology </p>
           <a class="result-link" href="/recycle-site">
-            <p>Link1</p>
+            <p>More info</p>
           </a>
     </div>
 
-    <h5>Friendly Earth</h5>
+    <h5>2. Friendly Earth</h5>
       <div class="results">
-          <p class="result-name">Friendly Earth </p>
           <a class="result-link" href="/recycle-site">
-            <p>Link1</p>
+            <p>More info</p>
           </a>
     </div>
 
-    <h5>Pacific Iron & Metal</h5>
+    <h5>3. Pacific Iron & Metal</h5>
       <div class="results">
-          <p class="result-name"> Pacific Iron & Metal </p>
           <a class="result-link" href="/recycle-site">
-            <p>Link1</p>
+            <p>More info</p>
           </a>
     </div>
 
-    <h5>RE-PC Recycled Computers and Peripherals</h5>
+    <h5> 4. RE-PC Recycled Computers and Peripherals</h5>
       <div class="results">
-          <p class="result-name"> RE-PC Recycled Computers and Peripherals </p>
           <a class="result-link" href="/recycle-site">
-            <p>Link1</p>
+            <p>More info</p>
           </a>
     </div>
-
-  
