--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,4 @@
-<h1>Home</h1>
+<div class="home-div">
+    <div class="img-div"></div>
+    <h5>We are an initiative that is looking to help Seattle residents recycle all types of products in order to help protect one of Washington’s greatest treasures, our environment.</h5>
+</div>
