--- a/views/categories/index.ejs
+++ b/views/categories/index.ejs
@@ -8,7 +8,7 @@
                 <p>Plastic</p>
             </div>
             <div class="card-action">
-                <a class="waves-effect waves-light modal-trigger" href="#modal1">Action</a>
+                <a class="waves-effect waves-light modal-trigger" href="#modal1">See Details</a>
             </div>
         </div>
     </div>
@@ -22,7 +22,7 @@
                 <p>Paper</p>
             </div>
             <div class="card-action">
-                <a class="waves-effect waves-light modal-trigger" href="#modal2">Action</a>
+                <a class="waves-effect waves-light modal-trigger" href="#modal2">See Details</a>
             </div>
         </div>
     </div>
@@ -36,7 +36,7 @@
                 <p>Glass</p>
             </div>
             <div class="card-action">
-                <a class="waves-effect waves-light modal-trigger" href="#modal3">Action</a>
+                <a class="waves-effect waves-light modal-trigger" href="#modal3">See Details</a>
             </div>
         </div>
         </div>
@@ -50,7 +50,7 @@
                 <p>Metals</p>
             </div>
             <div class="card-action">
-                <a class="waves-effect waves-light modal-trigger" href="#modal4">Action</a>
+                <a class="waves-effect waves-light modal-trigger" href="#modal4">See Details</a>
             </div>
         </div>
     </div>
@@ -64,7 +64,7 @@
                     <p>Organic</p>
                 </div>
                 <div class="card-action">
-                    <a class="waves-effect waves-light modal-trigger" href="#modal5">Action</a>
+                    <a class="waves-effect waves-light modal-trigger" href="#modal5">See Details</a>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
                     <p>Chemical</p>
                 </div>
                 <div class="card-action">
-                    <a class="waves-effect waves-light modal-trigger" href="#modal6">Action</a>
+                    <a class="waves-effect waves-light modal-trigger" href="#modal6">See Details</a>
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
                     <p>Electronics</p>
                 </div>
                 <div class="card-action">
-                    <a class="waves-effect waves-light modal-trigger" href="#modal7">Action</a>
+                    <a class="waves-effect waves-light modal-trigger" href="#modal7">See Details</a>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
                     <p>Appliances</p>
                 </div>
                 <div class="card-action">
-                    <a class="waves-effect waves-light modal-trigger" href="#modal8">Action</a>
+                    <a class="waves-effect waves-light modal-trigger" href="#modal8">See Details</a>
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
                     <p>Building Materials</p>
                 </div>
                 <div class="card-action">
-                    <a class="waves-effect waves-light modal-trigger" href="#modal9">Action</a>
+                    <a class="waves-effect waves-light modal-trigger" href="#modal9">See Details</a>
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                         <p>Grocery</p>
                     </div>
                     <div class="card-action">
-                        <a href="/address">Action</a>
+                        <a href="/address">Continue</a>
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                             <p>Agricultural</p>
                         </div>
                         <div class="card-action">
-                            <a href="/address">Action</a>
+                            <a href="/address">Continue</a>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                             <p>Office</p>
                         </div>
                         <div class="card-action">
-                            <a href="/address">Action</a>
+                            <a href="/address">Continue</a>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                             <p>Office</p>
                         </div>
                         <div class="card-action">
-                            <a href="/address">Mixed</a>
+                            <a href="/address">Continue</a>
                         </div>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
                                 <p>Printer, Copier, or Fax</p>
                             </div>
                             <div class="card-action">
-                                <a href="/address">Action</a>
+                                <a href="/address">Continue</a>
                             </div>
                         </div>
                     </div>
@@ -311,7 +311,7 @@
                                     <p>TV</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="/address">Action</a>
+                                    <a href="/address">Continue</a>
                                 </div>
                             </div>
                         </div>
@@ -324,7 +324,7 @@
                                     <p>Computer Tablets</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="/address">Action</a>
+                                    <a href="/address">Continue</a>
                                 </div>
                             </div>
                         </div>
@@ -337,7 +337,7 @@
                                     <p>Phones (All)</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="/address">Action</a>
+                                    <a href="/address">Continue</a>
                                 </div>
                             </div>
                         </div>
@@ -350,7 +350,7 @@
                                     <p>AV equipment</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="/address">Action</a>
+                                    <a href="/address">Continue</a>
                                 </div>
                             </div>
                         </div>
@@ -363,7 +363,7 @@
                                     <p>Monitors</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="/address">Action</a>
+                                    <a href="/address">Continue</a>
                                 </div>
                             </div>
                         </div>
